--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="username">Username</string>
     <string name="store_name">Store Name</string>
     <string name="category">Category</string>
+    <string name="search">Search</string>
 </resources>
