Updated Login page

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,6 @@
     <string name="shopper">Shopper</string>
     <string name="test">TEST</string>
     <string name="sign_out">Sign Out</string>
+    <string name="stop2go">Stop2Go</string>
+    <string name="stop_shop_save">Stop. Shop. Save.</string>
 </resources>
