Edittextview resets to blank, fixed name of on splashpage

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,5 @@
     <string name="sign_out">Sign Out</string>
     <string name="stop2go">Stop2Go</string>
     <string name="stop_shop_save">Stop. Shop. Save.</string>
+    <string name="shop2go">Shop2Go</string>
 </resources>
