--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,4 +33,5 @@
     <string name="orders">Orders</string>
     <string name="product_name">Product Name</string>
     <string name="price">Price</string>
+    <string name="product">product</string>
 </resources>
